Responsive overflow fix

--- a/source/stylesheets/_components.timeline.sass
+++ b/source/stylesheets/_components.timeline.sass
@@ -1,6 +1,9 @@
 .Days
   padding-top: 20px
-
+  +respond-to(small-down)
+    overflow-x: hidden
+    overflow-y: visible
+    
 .DayLine
   display: flex
   width: 100%
